# get-aarav-into-college-plz-

./: README.md
catalystlens_backend/: .gitignore  README.md  pyproject.toml  requirements.txt
catalystlens_backend/app/: main.py  provenance.py
catalystlens_backend/app/ai/: __init__.py  claim_extraction.py  error_diagnosis.py  feature_enrichment.py  llm_analysis.py  llm_claim_extraction.py  llm_client.py  schemas.py
catalystlens_backend/app/api/: routes.py
catalystlens_backend/app/core/: config.py  logging_config.py
catalystlens_backend/app/data_sources/: __init__.py  cache.py  clinicaltrials_client.py  fred_client.py  sec_client.py
catalystlens_backend/app/engines/: bayesian_success.py  burn_regime.py  capital_to_catalyst.py  cash_path.py  cumulative_incidence.py  dependence.py  disclosure_consistency.py  financing_strategy.py  hierarchical_pos.py  (+13 more)
catalystlens_backend/data/: example_company.json
catalystlens_backend/scripts/: smoke_audit.py  smoke_event_taxonomy.py  smoke_llm_disabled.py  smoke_llm_mocked.py  smoke_validation_backtest.py
catalystlens_backend/tests/: test_advanced_math.py  test_ai_assisted_layer.py  test_api.py  test_bayesian_success.py  test_cash_path.py  test_deep_research_remediation.py  test_institutional_data_foundation.py  test_llm_integration.py  test_monte_carlo.py  test_multistate.py  test_real_options_and_shapley.py  test_requested_math_patch.py  test_solvency.py  test_source_verified_schema.py  test_state_space.py  test_validation_framework.py  test_value_of_information.py
catalystlens_backend/training/: __init__.py
(+24 files in other folders)
